--- a/style/style.css
+++ b/style/style.css
@@ -1,2 +1,107 @@
-.attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: 'Karla';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: hsl(204, 43%, 93%);
+}
+
+
+.container {
+    width: 650px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 16px;
+    background-color: white;
+}
+
+.top {
+    height: 180px;
+}
+
+header h2 {
+    margin-top: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    font-family: 'Karla';
+    font-size: 400;
+    color: hsl(179, 62%, 43%);
+}
+
+.days {
+    margin: 10px 40px;
+    color: hsl(71, 73%, 54%);
+}
+.explanation{
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 30px;
+    color:hsl(218, 22%, 67%) ;
+}
+.bottom {
+    height: 220px;
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.subscription {
+    width: 325px;
+    color: white;
+    border-bottom-left-radius: 16px;
+    background-color: hsl(179, 62%, 43%);
+}
+.subscription h3{
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-bottom: 10px;
+}
+.dollar{
+    
+    margin-left: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+.subscription p{
+    margin: 0 40px;
+}
+button{
+    width: 80%;
+    background-color: hsl(71, 73%, 54%) ;
+    height: 40px;
+    margin: 20px 40px;
+    border: none;
+    border-radius: 8px;
+    color: white;
+}
+.whyus {
+    width: 325px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+}
+
+.attribution {
+
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
